crates/banshee_completion/tests/snapshots/snapshots__delete_using_alias_columns.snap
---
source: crates/banshee_completion/tests/snapshots.rs
expression: render_completion(&result)
---
context: ColumnRef { table: Some("orders"), tables: ["users", "orders"] }
is_incomplete: false
amount | Column | detail=orders (numeric) | insert=-
id | Column | detail=orders (integer) | insert=-
user_id | Column | detail=orders (integer) | insert=-
