crates/banshee_completion/tests/snapshots/snapshots__dml_cte_columns.snap
---
source: crates/banshee_completion/tests/snapshots.rs
expression: render_completion(&result)
---
context: ColumnRef { table: Some("changed"), tables: ["changed"] }
is_incomplete: false
amount | Column | detail=- | insert=-
user_id | Column | detail=- | insert=-
